# cosmic-popup-grab-reproducer

./: Cargo.toml  README.md
data/: io.github.crocodile.CosmicPopupGrabReproducer.desktop  io.github.crocodile.CosmicPopupGrabReproducer2.desktop
src/: main.rs
